Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextTextObjField.quorum
class Main
    text v = Test()
    action Main
    end

    action Test() returns text
        Text var
        var:SetValue("text")
        return var
    end
end